include/altdss/capi/dss.h

    
    /*! 
    Array of strings: Full Names of LOAD elements connected to the active bus.
    */
    ALTDSS_CAPI_DLL void Bus_Get_LoadList(char*** ResultPtr, int32_t* ResultDims);
    
    /*! 
    Array of doubles (complex) containing the complete 012 Zsc matrix. 
    Only available after Zsc is computed, either through the "ZscRefresh" command, or running a "FaultStudy" solution.
    Only available for buses with 3 nodes.
    */
    ALTDSS_CAPI_DLL void Bus_Get_ZSC012Matrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_ZSC012Matrix but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_ZSC012Matrix_GR(void);
    /*! 
    Returns an array with the names of all PCE connected to the active bus    
    */
    ALTDSS_CAPI_DLL void Bus_Get_AllPCEatBus(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Returns an array with the names of all PDE connected to the active bus
    */
    ALTDSS_CAPI_DLL void Bus_Get_AllPDEatBus(char*** ResultPtr, int32_t* ResultDims);