src/CAPI/CAPI_Bus.pas


procedure Bus_Get_LoadList_GR(); CDECL;
// Same as Bus_Get_LoadList but uses global result (GR) pointers
begin
    Bus_Get_LoadList(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;
//------------------------------------------------------------------------------
procedure Bus_Get_ZSC012Matrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL; //TODO: remove duplication between this and DoZsc012Cmd
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_Zsc012Matrix(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_ZSC012Matrix_GR(); CDECL;
// Same as Bus_Get_ZSC012Matrix but uses global result (GR) pointers
begin
    Bus_Get_ZSC012Matrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure Bus_Get_AllPCEatBus(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    i: Integer;
    pces: Array of String;
    Result: PPAnsiCharArray0;
begin
    if not _hasActiveBus(DSSPrime) then
    begin
        DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
        Exit;
    end;
    pces := DSSPrime.ActiveCircuit.getPCEatBus(DSSPrime.ActiveCircuit.ActiveBusIndex, False);
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, Length(pces));
    for i := 0 to High(pces) do
        Result[i] := DSS_CopyStringAsPChar(pces[i]);
end;
//------------------------------------------------------------------------------
procedure Bus_Get_AllPDEatBus(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
  i: Integer;
  pdes: Array of String;
  Result: PPAnsiCharArray0;
begin
    if not _hasActiveBus(DSSPrime) then
    begin
        DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
        Exit;
    end;
    pdes := DSSPrime.ActiveCircuit.getPDEatBus(DSSPrime.ActiveCircuit.ActiveBusIndex, False);
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, Length(pdes));
    for i := 0 to High(pdes) do
        Result[i] := DSS_CopyStringAsPChar(pdes[i]);
end;
//------------------------------------------------------------------------------
end.
